--- a/OpenNetworkFolder/OpenNetworkFolder.vcxproj.filters
+++ b/OpenNetworkFolder/OpenNetworkFolder.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="4 dist">
+      <UniqueIdentifier>{d8698dbc-62fe-47c8-b5ce-03d4a0639620}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -53,5 +56,10 @@
     <ClInclude Include="..\..\lsMisc\stdosd\stdosd.h">
       <Filter>1 Header</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="history.txt">
+      <Filter>4 dist</Filter>
+    </Text>
   </ItemGroup>
 </Project>
