Add version on resource

--- a/OpenNetworkFolder/OpenNetworkFolder.vcxproj
+++ b/OpenNetworkFolder/OpenNetworkFolder.vcxproj
@@ -114,10 +114,14 @@ dir /B /s "$(VCInstallDir)Redist\MSVC\$(VCToolsRedistVersion)\$(PlatformTarget)\
     <ClInclude Include="..\..\lsMisc\OpenCommon.h" />
     <ClInclude Include="..\..\lsMisc\RevealFolder.h" />
     <ClInclude Include="..\..\lsMisc\stdosd\stdosd.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="history.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="OpenNetworkFolder.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
